2006-04-04  Paul Eggert  <eggert@cs.ucla.edu>

	* tests/mktests.sh: Don't use 'cat'; just read the files directly.
	Prefer 'sort -u' to 'sort | uniq'.  Filter data before sorting it.
	Use 'comm' rather than N instances of grep; this also fixes a bug
	whereby substrings were incorrectly matched, causing us to not
	generate tests for AC_F77_NAME_MANGLING and AC_FUNC_LSTAT.
	(exclude_list): Exclude empty macros.
	(ac_exclude_list): Exclude AC_INCLUDES_DEFAULT.

	Use awk rather than grep -E or egrep, to avoid
	portability problems with regular expressions containing newlines.
	(exclude_list, ac_exclude_list, au_exclude_list, ac_exclude_script):
	Switch from grep to awk syntax.
	(ac_exclude_script): Renamed from ac_exclude_egrep.
	(au_exclude_script): Renamed from au_exclude_egrep.

2006-04-04  Noah Misch  <noah@cs.caltech.edu>

	* lib/autoconf/general.m4 (_AC_INIT_HELP): Only `configure.in' evidences
	a subdirectory subject to Cygnus `configure'.
	* lib/autoconf/status.m4 (_AC_OUTPUT_SUBDIRS): Likewise.

	* lib/autoconf/headers.m4 (_AC_CHECK_HEADER_MONGREL): Omit the bug
	report request when we have no AC_PACKAGE_BUGREPORT.

2006-04-03  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* THANKS: Update.

	* tests/mktests.sh: Update copyright year in the header of the
	generated files.

	* lib/autoconf/c.m4 (AC_C_INLINE): Do not skip cleanup code.
	(AC_C_RESTRICT): Likewise.  Furthermore, add a function with a
	typedef'ed restricted pointer, to catch a compiler bug on
	HP-UX 11.x, and fix warnings so it passes with -Werror.
	(_AC_PROG_CC_C99): Likewise.
	Reported by Albert Chin <china@thewrittenword.com>.
	* tests/mktests.sh: Do not skip AC_C_INLINE, AC_C_RESTRICT.

2006-04-03  Noah Misch  <noah@cs.caltech.edu>

	* bin/autoscan.in (subdirs): New global.
	(scan_file): Prune directories with configure{,.{ac,in,gnu}}.
	(output): Emit AC_CONFIG_SUBDIRS as needed.
	* tests/autoscan.at (autoscan): Remove XFAIL.

2006-04-03  Noah Misch  <noah@cs.caltech.edu>
